--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev-portfolio",
   "version": "0.1.0",
-  "homepage": "https://surajgopal85.github.io/dev-portfolio",
+  "homepage": "https://surajgopal85.github.io",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
